--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -30,15 +30,13 @@
   border-radius: 6px;
   font-size: 16px;
   font-weight: normal;
-  background-color: #f5f5f5;
 }
 
-.activeBackground {
+.activeFieldBackground {
   background-color: white;
 }
 
-/* @keyframes removeAnimation {
-  from {}
-  to {}
-} */
+.selectedTodo {
+  transition: opacity 0.5s ease-in-out;
+}
 
