improve animation, fixed bugs

--- a/src/components/TodoItem/TodoItem.module.css
+++ b/src/components/TodoItem/TodoItem.module.css
@@ -3,15 +3,7 @@
 }
 
 .content {
-  display: flex;
-  flex-direction: column;
-}
-
-.headerContainer {
-  display: flex;
-  flex-direction: row;
-  justify-content: 'space-between';
-  gap: 5%;
+  max-width: 650px;
 }
 
 .title {
