--- a/src/components/TodoList/TodoList.module.css
+++ b/src/components/TodoList/TodoList.module.css
@@ -1,9 +1,4 @@
 .container {
-  width: 100%;
-  max-width: 650px;
-  min-height: 650px;
-}
-
-.animateItem {
-  /* transition: all 1000ms ease-in; */
+  max-width: 100%;
+  perspective: 200px;
 }
