--- a/src/components/TodoList/index.css
+++ b/src/components/TodoList/index.css
@@ -1,7 +1,7 @@
 :root {
-  --height-timeout: .8s;
+  --height-timeout: 0.6s;
   --opacity-timeout: 0.5s;
-  --transform-timeout: 1s;
+  --transform-timeout: 0.5s;
   --perspective-timeout: 1s;
   --list-item-max-height: 100vh;
 }
@@ -9,13 +9,13 @@
 .todo-item-enter {
   max-height: 0;
   opacity: 0;
-  transform: rotateX(-90deg);
+  transform: scale(0.7);
 }
 
 .todo-item-enter-active {
   opacity: 1;
   max-height: var(--list-item-max-height);
-  transform: perspective(300px);
+  transform: none;
 
   transition: 
     max-height var(--height-timeout) ease-in-out, 
@@ -31,7 +31,7 @@
 .todo-item-exit-active {
   opacity: 0;
   max-height: 0;
-  transform: scale(0.5);
+  transform: scale(0.7);
 
   transition: 
     max-height var(--height-timeout) ease-out, 
